[gd_scene load_steps=15 format=3 uid="uid://cgk4yigi3gmeo"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_iaou6"]
[ext_resource type="Texture2D" uid="uid://c6iy227xdutog" path="res://imgs/iniciar.png" id="2_uknhy"]
[ext_resource type="Texture2D" uid="uid://1ghkloid8xjd" path="res://imgs/salir.png" id="3_wvfno"]
[ext_resource type="Texture2D" uid="uid://m6w37aw75cgu" path="res://imgs/instrucciones.png" id="4_jida6"]
[ext_resource type="Texture2D" uid="uid://cprfwucr8nhp6" path="res://imgs/cuadro_stats1.png" id="5_ym23x"]
[ext_resource type="Texture2D" uid="uid://bt5k70hguaasd" path="res://imgs/restart.png" id="6_nq4b3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_25res"]
bg_color = Color(0, 0.580392, 0.972549, 1)
border_width_bottom = 5
border_color = Color(0, 0.486275, 0.819608, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_papg8"]
bg_color = Color(0.00392157, 0.356863, 0.729412, 1)
border_width_bottom = 5
border_color = Color(0.0470588, 0.137255, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 4
shadow_offset = Vector2(3, 3)

[sub_resource type="Theme" id="Theme_v2l27"]
Button/styles/hover = SubResource("StyleBoxFlat_25res")
Button/styles/normal = SubResource("StyleBoxFlat_papg8")
Button/styles/pressed = SubResource("StyleBoxFlat_papg8")

[sub_resource type="SystemFont" id="SystemFont_x323c"]
font_names = PackedStringArray("Century Gothic")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbwre"]
bg_color = Color(0, 0.580392, 0.972549, 1)
border_width_bottom = 5
border_color = Color(0, 0.486275, 0.819608, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u0p6s"]
bg_color = Color(0.00392157, 0.356863, 0.729412, 1)
border_width_bottom = 5
border_color = Color(0.0470588, 0.137255, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 4
shadow_offset = Vector2(3, 3)

[sub_resource type="Theme" id="Theme_wuuaq"]
Button/styles/hover = SubResource("StyleBoxFlat_lbwre")
Button/styles/normal = SubResource("StyleBoxFlat_u0p6s")
Button/styles/pressed = SubResource("StyleBoxFlat_u0p6s")

[sub_resource type="SystemFont" id="SystemFont_i3c86"]
font_names = PackedStringArray("Century Gothic")

[node name="ui" type="CanvasLayer"]
script = ExtResource("1_iaou6")

[node name="pantalla_previa" type="Node2D" parent="."]

[node name="Iniciar" type="Button" parent="pantalla_previa"]
self_modulate = Color(1, 1, 1, 0.360784)
offset_left = 394.0
offset_top = 87.0
offset_right = 777.0
offset_bottom = 169.0
theme = SubResource("Theme_v2l27")

[node name="Sprite2D" type="Sprite2D" parent="pantalla_previa/Iniciar"]
position = Vector2(50, 44)
scale = Vector2(0.636246, 0.610977)
texture = ExtResource("2_uknhy")

[node name="Label" type="Label" parent="pantalla_previa/Iniciar"]
layout_mode = 0
offset_left = 156.0
offset_top = 20.0
offset_right = 378.0
offset_bottom = 125.0
theme_type_variation = &"HeaderLarge"
theme_override_fonts/font = SubResource("SystemFont_x323c")
text = "Iniciar"
horizontal_alignment = 1
uppercase = true

[node name="Salir" type="Button" parent="pantalla_previa"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 1047.0
offset_top = 548.0
offset_right = 1128.0
offset_bottom = 632.0

[node name="Sprite2D2" type="Sprite2D" parent="pantalla_previa/Salir"]
position = Vector2(43, 45)
scale = Vector2(0.166765, 0.158122)
texture = ExtResource("3_wvfno")

[node name="Instrucciones" type="Button" parent="pantalla_previa"]
self_modulate = Color(1, 1, 1, 0.266667)
offset_left = 394.0
offset_top = 280.0
offset_right = 787.0
offset_bottom = 360.0
theme = SubResource("Theme_wuuaq")

[node name="Sprite2D2" type="Sprite2D" parent="pantalla_previa/Instrucciones"]
position = Vector2(45, 43)
scale = Vector2(0.678665, 0.650407)
texture = ExtResource("4_jida6")

[node name="Label" type="Label" parent="pantalla_previa/Instrucciones"]
layout_mode = 0
offset_left = 163.0
offset_top = -48.0
offset_right = 377.0
offset_bottom = 57.0
theme_type_variation = &"HeaderLarge"
theme_override_fonts/font = SubResource("SystemFont_x323c")
text = "Instrucciones"
horizontal_alignment = 1
vertical_alignment = 2
uppercase = true

[node name="pantalla_instrucciones" type="Node2D" parent="."]
visible = false

[node name="fondo_instrucc" type="Sprite2D" parent="pantalla_instrucciones"]
position = Vector2(579.5, 280.5)
scale = Vector2(4.06129, 4.11875)
texture = ExtResource("5_ym23x")

[node name="Label" type="Label" parent="pantalla_instrucciones/fondo_instrucc"]
anchors_preset = -1
anchor_left = 0.342761
anchor_top = 0.554884
anchor_right = 0.43631
anchor_bottom = 0.554884
offset_left = -222.845
offset_top = -140.161
offset_right = -16.8446
offset_bottom = -22.1608
theme_override_fonts/font = SubResource("SystemFont_i3c86")
theme_override_font_sizes/font_size = 11
text = "Explora las vialidades de Guanajuato en una experiencia inmersiva. Enfrenta la incertidumbre, mide tu tolerancia a la ambigüedad y mejora tu adaptabilidad. ¡Disfruta del viaje!"
horizontal_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Salir_Instru" type="Button" parent="pantalla_instrucciones"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 555.0
offset_top = 558.0
offset_right = 633.0
offset_bottom = 630.0

[node name="botonSalir2" type="Sprite2D" parent="pantalla_instrucciones/Salir_Instru"]
position = Vector2(36, 35)
scale = Vector2(0.411572, 0.414415)
texture = ExtResource("6_nq4b3")

[connection signal="pressed" from="pantalla_previa/Iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="pantalla_previa/Salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="pantalla_previa/Instrucciones" to="." method="_on_instrucciones_pressed"]
[connection signal="pressed" from="pantalla_instrucciones/Salir_Instru" to="." method="_on_salir_instru_pressed"]
